--- a/flask_mongo/Dockerfile
+++ b/flask_mongo/Dockerfile
@@ -1,3 +1,12 @@
 FROM python:3
 WORKDIR /flask_mongo
 COPY . ./flask_mongo
+
+# Copy the rest of the application code into the container
+COPY . .
+
+# Expose the port that your Flask app listens on
+EXPOSE 5000
+
+# Start the Flask app
+CMD ["python", "app.py"]
