permisos para sh bis

--- a/flask_mongo/Dockerfile
+++ b/flask_mongo/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3
 WORKDIR /flask_mongo
 COPY . ./flask_mongo
-
+RUN chmod +x /start.sh
 # Copy the rest of the application code into the container
 COPY . .
 
@@ -9,4 +9,4 @@ COPY . .
 EXPOSE 5000
 
 # Start the Flask app
-CMD ["python", "app.py", "start.sh"]
+CMD ["python", "app.py"]
